Update .env with new settings

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_HOST=localhost
 DB_PORT=5432
 
 #Redis
-REDİS_URL=redis://localhost:6379/0
+REDIS_URL=redis://localhost:6379/0
 
 SECRET_KEY=vwx%6=9-b&^xk^7#5io=s!4-zl!o+c#piv6ww1&tiqc_lvww4^
 DEBUG=True
